[gd_scene load_steps=12 format=3 uid="uid://b1dlj3hlq6v3m"]

[ext_resource type="Script" path="res://Objetos/Entidades/enemy.gd" id="1_nlouj"]
[ext_resource type="Material" uid="uid://c4utnpyhj1mh5" path="res://Materiais/zombie.tres" id="2_l1fyh"]
[ext_resource type="PackedScene" uid="uid://dwpkvfn6jua4q" path="res://Objetos/Components/DamageableComponent.tscn" id="2_mkx0b"]

[sub_resource type="Animation" id="Animation_7w2nr"]
resource_name = "attack_zombie"
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Arms/RightArm")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0.707, 0, 0, 0.707, 0.5, 1, 0.924, 0, 0, 0.383, 1, 1, 0.707, 0, 0, 0.707)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Arms/LeftArm")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0.707, 0, 0, 0.707, 0.5, 1, 0.924, 0, 0, 0.383, 1, 1, 0.707, 0, 0, 0.707)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ms1d8"]
_data = {
"attack_zombie": SubResource("Animation_7w2nr")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5hro1"]
radius = 0.25
height = 0.8

[sub_resource type="SphereShape3D" id="SphereShape3D_t8xwy"]
margin = 0.004
radius = 0.1

[sub_resource type="CapsuleMesh" id="CapsuleMesh_er1wg"]
material = ExtResource("2_l1fyh")
radius = 0.25
height = 0.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eo37a"]
albedo_color = Color(0, 0.364706, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_nbpev"]
material = ExtResource("2_l1fyh")
radius = 0.2
height = 0.75

[sub_resource type="SphereMesh" id="SphereMesh_rjgkk"]
material = ExtResource("2_l1fyh")
radius = 0.2
height = 0.4

[node name="Enemy" type="CharacterBody3D" groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_nlouj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ms1d8")
}

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.12242, 0)
target_position = Vector3(0, 0, -0.4)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="BodyCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(0.49, 0, 0, 0, 0.49, 0, 0, 0, 0.49, 0, 0, 0)
shape = SubResource("CapsuleShape3D_5hro1")

[node name="DamageableComponent" parent="BodyCollider" instance=ExtResource("2_mkx0b")]

[node name="HeadCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.95424e-05, 0.283255, 0)
shape = SubResource("SphereShape3D_t8xwy")

[node name="DamageableComponent" parent="HeadCollider" instance=ExtResource("2_mkx0b")]

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(6.42557e-08, 0, 0.49, 0, 0.49, 0, -0.49, 0, 6.42557e-08, 0, 0, 0)
mesh = SubResource("CapsuleMesh_er1wg")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_eo37a")

[node name="Arms" type="Node3D" parent="Body"]
transform = Transform3D(-4.37115e-08, 0, -1, 0, 1, 0, 1, 0, -4.37115e-08, 0.0208159, 0.180349, 0.00776025)

[node name="RightArm" type="MeshInstance3D" parent="Body/Arms"]
transform = Transform3D(0.49, 0, 0, 0, -2.14186e-08, -0.49, 0, 0.49, -2.14186e-08, 0.2, 0, -0.2)
mesh = SubResource("CapsuleMesh_nbpev")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_eo37a")

[node name="LeftArm" type="MeshInstance3D" parent="Body/Arms"]
transform = Transform3D(0.49, 0, 0, 0, -2.14186e-08, -0.49, 0, 0.49, -2.14186e-08, -0.2, 0, -0.2)
mesh = SubResource("CapsuleMesh_nbpev")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_eo37a")

[node name="HeadMesh" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, -9.9476e-14, 0, 1, 0, 9.9476e-14, 0, 1, 0, 0.581784, 0)
mesh = SubResource("SphereMesh_rjgkk")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="finish_attack"]
[connection signal="damaged" from="BodyCollider/DamageableComponent" to="." method="body_damage"]
[connection signal="damaged" from="HeadCollider/DamageableComponent" to="." method="headshot_damage"]
